# fakegeobot

./: .env  .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  teamplate.env  template.env
.github/workflows/: build.yml  python-unit-test.yml
bot/: __init__.py  __main__.py  abstract_bot.py  bot.py  main.py
bot/_action/: __init__.py  fakelocation.py
bot/_commands/: __init__.py  auth.py  code.py  command.py  delete.py  disable.py  enable.py  help.py  info.py  language.py  location.py  reauth.py  recipient.py  schedule.py  send.py  start.py
bot/_config/: __init__.py  config.py
bot/_cron/: __init__.py  cron.py
bot/_db/: __init__.py  databasehandler.py
bot/_normalizer/: __init__.py  authcode.py  normalizer.py  phonenumber.py
bot/_user/: __init__.py  requestcode.py
bot/bot/: __init__.py  abstract_bot.py  bot.py  botcontext.py
bot/model/: __init__.py  apiapp.py  geolocation.py  user.py  (+1 more)
fakegeo/: __init__.py  arg.py  bot.py  checkin.py  config.py  cronaction.py  handlerusers.py  main.py  session.py  session_name.py  user.py
fakegeo_polychessbot/: __init__.py  arg.py  arghelper.py  bot.py  checkin.py  config.py  cronaction.py  databasehandler.py  geolocation.py  handlerusers.py  main.py  proxytelegram.py  session.py  session_name.py  user.py  usermanager.py
src/: CheckIn.py  Config.py  Geolocation.py  __init__.py  bot.py  checkin.py  config.py  geolocation.py  main.py  userauth.py
test/: rootpath.py  test_arg.py  test_bot.py  test_handlerusers.py  test_session.py  test_session_name.py
(+56 files in other folders)
